# eldritch

./: .gitignore  .prettierrc  LICENSE  README.md  pyproject.toml  render_pyproject.py
project/: context.py  render.py
project/templates/: pyproject.toml.jinja2
scripts/: add_init_to_tests.py
src/eldritch/: __init__.py  __main__.py  assets.py  commands.py  config.py  context.py  decorators.py  dotproject.py  loaders.py  render.py  typing.py
src/eldritch/api/: _api_base.py  api.py  license.py
src/eldritch/assets/: metadata.toml
src/eldritch/core/: README.md  _cli.py  _mixins.py  _plugin_def.py  _plugin_loader.py  config.py  context.py  decorators.py  mixins.py  plugin.py  plugin_manager.py  use_context.py
src/eldritch/core/plugins/: __init__.py
src/eldritch/plugins/: README.md
src/eldritch/plugins/license/: __init__.py  cli.py  plugin.py
src/eldritch/plugins/license/templates/LGPL-3.0-or-later/: NOTICE.jinja2
test/unit/: conftest.py  test_config.py
test/unit/test_core/: test_use_context.py
test/unit/test_plugins/test_license/: test_api.py
tests/: test_eldrige.py
