[tool.poetry]
name = "eldritch"
version = "0.1.0"
license = "LGPL-3.0-or-later"
description = "Collection of development command line utilities."
authors = ["Krzysztof Wiśniewski <argmaster.world@gmail.com>"]
maintainers = []
readme = "README.md"
repository = "https://github.com/Argmaster/eldritch.git"
documentation = "https://argmaster.github.io/Eldrige/"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
rich = "^12.5.1"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
mkdocs = [
    { version = "^1.2", python = "<3.9" },
    { version = "^1.3", python = ">=3.9" },
]
pytest = "^5.2"
ptpython = "^3.0.20"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.eldrige]
gitignore = [

]
