[tool.poetry]
name = "eldritch"
version = "0.1.0"
license = "LGPL-3.0-or-later"
description = "Collection of development command line utilities."
authors = ["Krzysztof Wiśniewski <argmaster.world@gmail.com>"]
maintainers = []
readme = "README.md"
repository = "https://github.com/Argmaster/eldritch.git"
documentation = "https://argmaster.github.io/Eldritch/"
keywords = ["python", "development", "eldritch", "cli", "project"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
include = ["COPYING.md", "COPYING.LESSER.md", "LICENSE.md"]

[tool.poetry.dependencies]
python = "^3.8"
rich = "^12.5.1"
requests = "^2.28.1"
pluggy = "^1.0.0"

[tool.poetry.dev-dependencies]
mkdocs = [
    { version = "^1.2", python = "<3.9" },
    { version = "^1.3", python = ">=3.9" },
]
pytest = "^7.0.0"
ptpython = "^3.0.20"
pytest-sugar = "^0.9.5"
isort = "^5.10.1"

[tool.poetry.scripts]
eldrich = "eldritch.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
skip = ["external"]
profile = "black"
known_first_party = "eldritch"
src_paths = ["source/eldritch", "tests"]
line_length = 79

[tool.eldritch.plugins]
eldritch.core.isort = true
eldritch.core.black = true
