[tool.poetry]
name = "eldritch"
version = "0.1.0"
license = "LGPL-3.0-or-later"
description = "Collection of development command line utilities."
authors = ["Krzysztof Wiśniewski <argmaster.world@gmail.com>"]
maintainers = []
readme = "README.md"
repository = "https://github.com/Argmaster/eldritch.git"
documentation = "https://argmaster.github.io/Eldritch/"
keywords = ["python", "development", "eldritch", "cli", "project"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
include = ["COPYING.md", "COPYING.LESSER.md", "LICENSE.md"]

[tool.poetry.dependencies]
python = "^3.8"
rich = "^12.5.1"
requests = "^2.28.1"
pluggy = "^1.0.0"
mypy = "^0.971"

[tool.poetry.dev-dependencies]
mkdocs = [
    { version = "^1.2", python = "<3.9" },
    { version = "^1.3", python = ">=3.9" },
]
pytest = "^7.0.0"
ptpython = "^3.0.20"
pytest-sugar = "^0.9.5"
isort = "^5.10.1"
black = "^22.6.0"

[tool.poetry.scripts]
eldrich = "eldritch.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
skip = ["external", ".tox"]
profile = "black"
known_first_party = "eldritch"
src_paths = ["source/eldritch", "tests"]
line_length = 79

[tool.black]
line-length = 79
target-version = ['py38']
extend-exclude = "(external)"

[tool.mypy]
# https://mypy.readthedocs.io/en/stable/cheat_sheet_py3.html
# https://mypy.readthedocs.io/en/stable/command_line.html
exclude = ["external", ".tox"]
# Import discovery
ignore_missing_imports = true
follow_imports = "normal"
no_silence_site_packages = false
# Disallow dynamic typing
disallow_any_unimported = false
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = false
disallow_any_generics = false
disallow_subclassing_any = false
# Untyped definitions and calls
disallow_untyped_calls = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
# None and Optional handling
no_implicit_optional = true
# Configuring warnings
warn_redundant_casts = true
warn_unused_ignores = false
no_warn_no_return = false
warn_return_any = true
warn_unreachable = true
# Miscellaneous strictness flags
allow_untyped_globals = false
allow_redefinition = true
local_partial_types = false
no_implicit_reexport = false
strict_equality = true
# https://mypy.readthedocs.io/en/stable/error_codes.html#error-codes
# disable_error_code =
enable_error_code = "redundant-expr"
# Configuring error messages
show_error_context = true
show_column_numbers = true
show_error_codes = true
pretty = true
no_color_output = false
no_error_summary = false
show_absolute_path = true

[tool.eldritch.plugins]
eldritch.core.isort = true
eldritch.core.black = true
